# gowt

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  pyproject.toml
src/gowt/: __init__.py  __main__.py
